crates/search/tests/settings/snapshots/vectors.rs/bad_parameters_2/rest-headers-task_result.snap
---
source: crates/indexsearch/tests/settings/vectors.rs
---
{
  "uid": "[uid]",
  "batchUid": "[batchUid]",
  "indexUid": "test",
  "status": "succeeded",
  "type": "settingsUpdate",
  "canceledBy": null,
  "details": {
    "embedders": {
      "test": {
        "source": "rest",
        "dimensions": 768,
        "url": "http://rest.example/",
        "request": {
          "text": "{{text}}"
        },
        "response": {
          "embedding": "{{embedding}}"
        },
        "headers": {
          "custom": "value"
        }
      }
    }
  },
  "error": null,
  "duration": "[duration]",
  "enqueuedAt": "[enqueuedAt]",
  "startedAt": "[startedAt]",
  "finishedAt": "[finishedAt]"
}
