crates/search/tests/settings/snapshots/vectors.rs/bad_parameters_2/userProvided-documentTemplateMaxBytes-sending_result.snap
---
source: crates/indexsearch/tests/settings/vectors.rs
---
{
  "message": "`.embedders.test`: Field `documentTemplateMaxBytes` unavailable for source `userProvided`.\n  - note: `documentTemplateMaxBytes` is available for sources: `openAi`, `huggingFace`, `ollama`, `rest`\n  - note: available fields for source `userProvided`: `source`, `dimensions`, `distribution`, `binaryQuantized`",
  "code": "invalid_settings_embedders",
  "type": "invalid_request",
  "link": "https://docs.hanzo.ai/errors#invalid_settings_embedders"
}
